2011-03-28  Adele Peterson  <adele@apple.com>

        Build fix.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        (DumpRenderTreeSupportGtk::webkitWebFrameSelectionHasSpellingMarker):

2011-03-28  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Fullscreen tests failing after r82084
        https://bugs.webkit.org/show_bug.cgi?id=57219

        Added the withKeyboard parameter to supportsFullScreenForElement
        method in ChromeClient. Fullscreen will be disabled for keyboard
        access by default.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::supportsFullScreenForElement):
        * WebCoreSupport/ChromeClientGtk.h:

2011-03-25  Andy Estes  <aestes@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION (r70748): latest nightly builds kills AC_QuickTime.js
        https://bugs.webkit.org/show_bug.cgi?id=49016

        Update objectContentType() implementation to handle the
        shouldPreferPlugInsForImages flag.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::objectContentType):
        * WebCoreSupport/FrameLoaderClientGtk.h:

2011-03-25  Priit Laes  <plaes@plaes.org>

        Reviewed by Martin Robinson.

        [GTK] [PATCH] Avoid critical warning when free-ing list of plugins
        https://bugs.webkit.org/show_bug.cgi?id=57025

        * webkit/webkitwebplugindatabase.cpp:
        (webkit_web_plugin_database_plugins_list_free):
        Use regular check and return instead of g_return_if_fail.

2011-03-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r81916 and r81917.
        http://trac.webkit.org/changeset/81916
        http://trac.webkit.org/changeset/81917
        https://bugs.webkit.org/show_bug.cgi?id=57071

        broke a test on platforms that do not have QuickTime installed
        (Requested by estes on #webkit).
