@@ -1,3 +1,10 @@
+2011-03-29  Philippe Normand  <pnormand@igalia.com>
+
+        Unreviewed, disable an assert in testwebview due to
+        https://bugs.webkit.org/show_bug.cgi?id=57315
+
+        * tests/testwebview.c:
+
 2011-03-28  Adele Peterson  <adele@apple.com>
 
         Build fix.
